pagination fix and charts spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,6 +85,7 @@ html[xmlns] .clearfix {
  * Charts Structure 
  */
 #chart_wrapper {
+  min-height: 575px;
   overflow: hidden;
   margin-top: 40px;
 }
@@ -102,7 +103,9 @@ html[xmlns] .clearfix {
 }
 .chart {
   border: solid 1px #ccc;
-  width: 350px;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  width: 250px;
   padding: 5px 10px;
   transition: 0.2s linear all;
   -webkit-transition: 0.2s linear all;
@@ -121,7 +124,7 @@ html[xmlns] .clearfix {
   float: left;
 }
 .chart_text {
-  width: 300px;
+  width: 200px;
 }
 .chart img {
   position: relative;
@@ -133,15 +136,12 @@ html[xmlns] .clearfix {
 }
 .chart:hover, .chart_list .active {
   cursor: pointer;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: rgba(0, 0, 0, 0.0976562) 0 1px 5px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.0976562) 0 1px 5px;
+  box-shadow: rgba(0, 0, 0, 0.0976562) 0 1px 5px;
  
 }
 .chart_list .active {
- -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   background: whitesmoke;
 }
 .chart .title {
@@ -150,7 +150,7 @@ html[xmlns] .clearfix {
 }
 .chart .genres {
   font-size: 11px;
-  width: 315px;
+  width: 200px;
 }
 .chart ul {
   margin: 0;
@@ -176,7 +176,7 @@ html[xmlns] .clearfix {
   margin-bottom: 20px;
   position: relative;
   float: left;
-  width: 596px;
+  width: 690px;
 }
 #chart_songs tr {
   color: #555;
